// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Dropdown > Should be rendering bottom-left 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      class="m-0 p-0 align-top !no-underline hover:!underline rounded whitespace-nowrap leading-5 inline w-fit underline text-primary hover:text-primary-light border-primary-light cursor-pointer"
    >
      open dropdown
      <svg
        class="inline-block ml-1 -mt-0.5"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M216.49,104.49l-80,80a12,12,0,0,1-17,0l-80-80a12,12,0,0,1,17-17L128,159l71.51-71.52a12,12,0,0,1,17,17Z"
        />
      </svg>
    </button>
    <div
      class="absolute z-30 top-full mt-[5px] left-0"
    >
      <div
        class="flex flex-col items-start"
      >
        <span
          class="relative border-black border-l-transparent border-r-transparent"
          style="border-left-width: 6px; border-right-width: 6px; border-bottom-width: 5px; border-top-color: transparent; left: -6px;"
        />
        <div
          class="bg-black text-white rounded overflow-hidden py-2 min-w-[150px] md:max-w-[250px]"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > Should be rendering top-left 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      class="m-0 p-0 align-top !no-underline hover:!underline rounded whitespace-nowrap leading-5 inline w-fit underline text-primary hover:text-primary-light border-primary-light cursor-pointer"
    >
      open dropdown
      <svg
        class="inline-block ml-1 -mt-0.5"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M216.49,104.49l-80,80a12,12,0,0,1-17,0l-80-80a12,12,0,0,1,17-17L128,159l71.51-71.52a12,12,0,0,1,17,17Z"
        />
      </svg>
    </button>
    <div
      class="absolute z-30 bottom-full mb-[5px] left-0"
    >
      <div
        class="flex flex-col-reverse items-start"
      >
        <span
          class="relative border-black border-l-transparent border-r-transparent"
          style="border-left-width: 6px; border-right-width: 6px; border-top-width: 5px; border-bottom-color: transparent; left: -6px;"
        />
        <div
          class="bg-black text-white rounded overflow-hidden py-2 min-w-[150px] md:max-w-[250px]"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > Should be rendering top-right 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      class="m-0 p-0 align-top !no-underline hover:!underline rounded whitespace-nowrap leading-5 inline w-fit underline text-primary hover:text-primary-light border-primary-light cursor-pointer"
    >
      open dropdown
      <svg
        class="inline-block ml-1 -mt-0.5"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M216.49,104.49l-80,80a12,12,0,0,1-17,0l-80-80a12,12,0,0,1,17-17L128,159l71.51-71.52a12,12,0,0,1,17,17Z"
        />
      </svg>
    </button>
    <div
      class="absolute z-30 bottom-full mb-[5px] right-0"
    >
      <div
        class="flex flex-col-reverse items-end"
      >
        <span
          class="relative border-black border-l-transparent border-r-transparent"
          style="border-left-width: 6px; border-right-width: 6px; border-top-width: 5px; border-bottom-color: transparent; right: -6px;"
        />
        <div
          class="bg-black text-white rounded overflow-hidden py-2 min-w-[150px] md:max-w-[250px]"
        >
          <div />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown > Should be rendering with default bottom-right position 1`] = `
<div>
  <div
    class="relative"
  >
    <button
      aria-expanded="true"
      aria-haspopup="true"
      class="m-0 p-0 align-top !no-underline hover:!underline rounded whitespace-nowrap leading-5 inline w-fit underline text-primary hover:text-primary-light border-primary-light cursor-pointer"
    >
      open dropdown
      <svg
        class="inline-block ml-1 -mt-0.5"
        fill="currentColor"
        height="1em"
        viewBox="0 0 256 256"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M216.49,104.49l-80,80a12,12,0,0,1-17,0l-80-80a12,12,0,0,1,17-17L128,159l71.51-71.52a12,12,0,0,1,17,17Z"
        />
      </svg>
    </button>
    <div
      class="absolute z-30 top-full mt-[5px] right-0"
    >
      <div
        class="flex flex-col items-end"
      >
        <span
          class="relative border-black border-l-transparent border-r-transparent"
          style="border-left-width: 6px; border-right-width: 6px; border-bottom-width: 5px; border-top-color: transparent; right: -6px;"
        />
        <div
          class="bg-black text-white rounded overflow-hidden py-2 min-w-[150px] md:max-w-[250px]"
        >
          <button
            aria-label="Payments"
            class="w-full bg-black !text-white py-2 pl-4 pr-8 text-sm font-semibold flex items-center focus:!outline-none hover:bg-violet cursor-pointer focus:bg-violet"
          >
            <div
              class="mr-2"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 256 256"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M224,48H32A16,16,0,0,0,16,64V192a16,16,0,0,0,16,16H224a16,16,0,0,0,16-16V64A16,16,0,0,0,224,48Zm0,16V88H32V64Zm0,128H32V104H224v88Zm-16-24a8,8,0,0,1-8,8H168a8,8,0,0,1,0-16h32A8,8,0,0,1,208,168Zm-64,0a8,8,0,0,1-8,8H120a8,8,0,0,1,0-16h16A8,8,0,0,1,144,168Z"
                />
              </svg>
            </div>
            <span
              class="text-ellipsis overflow-hidden whitespace-nowrap"
              title="Payments"
            >
              Payments
            </span>
          </button>
          <button
            aria-label="Items"
            class="w-full bg-black !text-white py-2 pl-4 pr-8 text-sm font-semibold flex items-center focus:!outline-none hover:bg-violet cursor-pointer focus:bg-violet"
          >
            <div
              class="mr-2"
            >
              <div
                class="w-[16px]"
              />
            </div>
            <span
              class="text-ellipsis overflow-hidden whitespace-nowrap"
              title="Items"
            >
              Items
            </span>
          </button>
          <div
            class="h-px my-2"
          >
            <hr
              class="border-gray-600"
            />
          </div>
          <button
            aria-label="Delete"
            class="w-full bg-black !text-white py-2 pl-4 pr-8 text-sm font-semibold flex items-center focus:!outline-none hover:bg-violet cursor-pointer focus:bg-violet"
          >
            <div
              class="mr-2"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 256 256"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M165.66,101.66,139.31,128l26.35,26.34a8,8,0,0,1-11.32,11.32L128,139.31l-26.34,26.35a8,8,0,0,1-11.32-11.32L116.69,128,90.34,101.66a8,8,0,0,1,11.32-11.32L128,116.69l26.34-26.35a8,8,0,0,1,11.32,11.32ZM232,128A104,104,0,1,1,128,24,104.11,104.11,0,0,1,232,128Zm-16,0a88,88,0,1,0-88,88A88.1,88.1,0,0,0,216,128Z"
                />
              </svg>
            </div>
            <span
              class="text-ellipsis overflow-hidden whitespace-nowrap"
              title="Delete"
            >
              Delete
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
